--- a/livrables.html
+++ b/livrables.html
@@ -76,8 +76,8 @@
     <div class="container mt-4">
       <p class="alert alert-danger fw-bold">
         <i class="fa fa-exclamation-triangle"></i>
-        Le contenu de cette page est encore provisoire. Dernière mise à jour
-        25.02.2021 à 17:00
+        Le contenu de cette page peut être modifié. Dernière mise à jour
+        27.02.2021 à 15:00
       </p>
       <h1 class="display-3">Livrables</h1>
       <p class="lead mt-3">
@@ -94,7 +94,7 @@
         <section>
           <h2 class="display-5">
             Vue synoptique et échéancier
-            <span class="badge bg-danger">à confirmer</span>
+            <span class="badge bg-success">confirmé</span>
           </h2>
           <!-- Tableau récapitulatif -->
           <div class="table-responsive">
@@ -254,11 +254,12 @@
       >
         <h3>
           #1 <i class="fa fa-users"></i> Première version de la maquette
-          interactive et scénario test utilisateur
+          interactive et protocole du test utilisateur
         </h3>
         <p class="lead">
           Ce livrable vous permet de jeter les bases pour vos tests utilisateurs
-          avec la préparation de la maquette interactive et du scénario.
+          avec la préparation de la maquette interactive et du
+          scénario/protocole de passation.
         </p>
         <h4>Consignes</h4>
         <p>
@@ -270,7 +271,7 @@
             Créez entre 20 et 30 pages de votre site selon l'architecture de
             l'information du projet ERGO I
           </li>
-          <li>Créez les contenus graphiques et textuels des pages</li>
+          <li>Créez les contenus textuels et graphiques des pages</li>
           <li>
             Reliez les pages avec un menu de navigation et/ou des liens
             hypertextuels dans les contenus des pages
@@ -295,7 +296,7 @@
           <li>
             La description de 4 ou 5 tâches cohérentes avec les finalités de
             votre projet et la mise en situation à partager avec les
-            participants
+            participants.
           </li>
           <li>
             Les actions nécessaires pour résoudre les tâches. En cas de
@@ -327,8 +328,9 @@
             la maquette avec un mot de passe.
           </li>
           <li>
-            Vos pages doivent présenter des contenus aboutis, n'utilisez pas de
-            <em>placeholders</em>
+            Vos pages doivent présenter des contenus suffisamment aboutis pour
+            que votre test utilisateur soit informatif. N'utilisez pas de
+            <em>placeholders</em> trop évidents et qui ne servent à rien.
           </li>
           <li>
             Si votre site propose des fonctionnalités dynamiques (e.g. blog),
@@ -351,14 +353,33 @@
             ne sont pas à l'aise avec l'enregistrement.
           </li>
           <li>
-            Vous devez faire passer le test à 3 utilisateurs du public cible
-            pour chaque personne du binôme (donc 6 au total).
+            Vous devez faire passer le test complet (à l'exception du test des 5
+            seconds, voir point suivant) à 3 utilisateurs du public cible pour
+            chaque personne du binôme (donc 6 au total).
+          </li>
+          <li>
+            Vous devez faire passer le test des 5 seconds à au moins 3
+            utilisateurs pour chaque personne du binôme (donc au moins 6 au
+            total). Ces personnes peuvent être les mêmes des tâches ou d'autres
+            personnes. S'il ne s'agit pas des mêmes personnes, pensez à bien le
+            noter en prévision du rapport individuel/final.
           </li>
           <li>
             Les passations sont individuelles pour chaque personne du binôme et
             les résultats du test seront d'abord traités de manière indépendante
             dans le rapport individuel. Votre collègue peut assister, mais sans
             intervenir activement.
+          </li>
+          <li>
+            Vos tâches doivent prévoir une solution atteignables à travers les
+            manipulations et informations disponibles dans votre maquette.
+            Évitez les instructions directes et donnez à l'utilisateur le
+            contrôle de la situation.
+          </li>
+          <li>
+            Chaque tâche doit commencer depuis la page d'accueil de votre site.
+            Si l'utilisateur a déjà trouvé l'informations dans une tâche
+            précédente, demandez-lui de répéter quand même les manipulations.
           </li>
         </ul>
 
@@ -385,7 +406,7 @@
           <li>
             Utilisez le plus possible des composantes/éléments réutilisables
             pour les parties communes des pages (e.g. menu de navigation,
-            header, footer)
+            header, footer).
           </li>
         </ul>
 
@@ -395,7 +416,7 @@
             Créez deux documents de passation. Un complet de tous les détails
             (i.e. celui que vous rendez pour le feu vert) et l'autre avec
             seulement les informations nécessaires aux participants (mise en
-            situation, descriptif des tâches).
+            situation et descriptif des tâches).
           </li>
           <li>
             Vos participants doivent être représentatifs du public cible. Si
@@ -404,7 +425,7 @@
             utilisateurs partagent des caractéristiques communes.
           </li>
           <li>
-            Évitez des professionnels du design ou développement web, leur
+            Évitez des professionnels du design ou du développement web, leur
             perspective est souvent focalisée sur les détails de conception
             plutôt que sur les contenus.
           </li>
@@ -416,6 +437,11 @@
           <li>
             Essayez de faire les passations le plus tôt possible, la rédaction
             du rapport prend du temps.
+          </li>
+          <li>
+            Pendent le test, assumez une attitude bienveillante et accompagnez
+            les utilisateurs en fonction des caractéristiques d'un bon
+            facilitateur discutées pendant le cours intensif.
           </li>
         </ul>
       </section>
