--- a/livrables.html
+++ b/livrables.html
@@ -439,6 +439,12 @@
             du rapport prend du temps.
           </li>
           <li>
+            Si vous êtes indécis sur deux variantes d'une même page, vous pouvez
+            éventuellement montrer la variante que vous n'avez pas incorporée
+            dans le test aux utilisateurs pour avoir un avis dans la phase
+            post-test.
+          </li>
+          <li>
             Pendent le test, assumez une attitude bienveillante et accompagnez
             les utilisateurs en fonction des caractéristiques d'un bon
             facilitateur discutées pendant le cours intensif.
