Slides dans le support

--- a/support.html
+++ b/support.html
@@ -77,7 +77,59 @@
       <h1 class="display-3">Support</h1>
       <p class="lead">Liste de ressources utiles pour le cours.</p>
 
-      <p class="lead">À faire</p>
+      <h2>Slides</h2>
+      <p class="lead">
+        Supports utilisés pendant les séances du cours synchrone.
+      </p>
+      <dl>
+        <dt class="lead">
+          <i class="fa fa-chevron-circle-right"></i>
+          <a href="https://mafritz.ch/slides/fr/ux-ui-web/#/"
+            >UX pour la conception et évaluation de UI pour le web</a
+          >
+        </dt>
+        <dd class="mb-3">
+          Présentation général du domaine UX/UI. La présentation se focalise
+          principalement sur la phase d'implémentation d'une interface concrète.
+          Les techniques de conception et évaluation des phases exploiratoires
+          (e.g. analyse des besoins, persona, ...) ne sont pas abordées.
+        </dd>
+        <dt class="lead">
+          <i class="fa fa-chevron-circle-right"></i>
+          <a href="http://mafritz.ch/slides/fr/ux-prototypage-low-fi/#/"
+            >Prototypage low-fidelity dans l'UX</a
+          >
+        </dt>
+        <dd class="mb-3">
+          Présentation sur des techniques de prototypage low-fi dans le UX. Ce
+          type de prototypage s'effectue surtout dans des phases initiales du
+          projet, afin de maximiser l'exploration de variantes en minimisant le
+          travail à accomplir au niveau du design et des fonctionnalités.
+        </dd>
+        <dt class="lead">
+          <i class="fa fa-chevron-circle-right"></i>
+          <a href="http://mafritz.ch/slides/fr/ux-prototypage-high-fi/#/"
+            >Prototypage high-fidelity dans l'UX</a
+          >
+        </dt>
+        <dd class="mb-3">
+          Présentation sur des techniques de prototypage high-fi dans le UX. Ce
+          type de prototypage essaie de véhiculer une expérience la plus proche
+          du produit finale au niveau de l'apparence ésthétique et/ou des
+          fonctionnalités.
+        </dd>
+        <dt class="lead">
+          <i class="fa fa-chevron-circle-right"></i>
+          <a href="https://mafritz.ch/slides/fr/ux-techniques-evaluation/#/"
+            >Techniques d'évaluation dans l'UX</a
+          >
+        </dt>
+        <dd class="mb-3">
+          Présentation sur des techniques d'évaluation comme l'oculométrie, le
+          test A/B, le test des 5 seconds, les échelles d'utilisabilité/UX, et
+          le test utilisateur.
+        </dd>
+      </dl>
     </div>
 
     <footer class="bg-dark text-white mt-5 mb-0 py-5">
