--- a/support.html
+++ b/support.html
@@ -77,11 +77,12 @@
       <h1 class="display-3">Support</h1>
       <p class="lead">Liste de ressources utiles pour le cours.</p>
 
+      <!-- Slides -->
       <h2>Slides</h2>
       <p class="lead">
         Supports utilisés pendant les séances du cours synchrone.
       </p>
-      <dl>
+      <dl class="w-75">
         <dt class="lead">
           <i class="fa fa-chevron-circle-right"></i>
           <a href="https://mafritz.ch/slides/fr/ux-ui-web/#/"
@@ -115,7 +116,7 @@
         <dd class="mb-3">
           Présentation sur des techniques de prototypage high-fi dans le UX. Ce
           type de prototypage essaie de véhiculer une expérience la plus proche
-          du produit finale au niveau de l'apparence ésthétique et/ou des
+          du produit finale au niveau de l'apparence esthétique et/ou des
           fonctionnalités.
         </dd>
         <dt class="lead">
@@ -128,6 +129,49 @@
           Présentation sur des techniques d'évaluation comme l'oculométrie, le
           test A/B, le test des 5 seconds, les échelles d'utilisabilité/UX, et
           le test utilisateur.
+        </dd>
+      </dl>
+
+      <!-- Logiciels -->
+      <h2 class="mt-5">Logiciels de prototypage</h2>
+      <p class="lead">
+        Logiciels pour le prototypage à différents niveaux d'abstraction.
+      </p>
+      <dl class="w-75">
+        <dt class="lead">
+          <i class="fa fa-chevron-circle-right"></i>
+          <a href="https://www.figma.com/">Figma</a>
+        </dt>
+        <dd class="mb-3">
+          Logiciel pour le prototypage et les maquettes interactives qui permet
+          de collaborer en temps réel. L'application web marche dans le
+          navigateur ou peut être téléchargée en version desktop. Le plan
+          gratuit permet une collaboration limitée.
+        </dd>
+        <dt class="lead">
+          <i class="fa fa-chevron-circle-right"></i>
+          <a href="https://uizard.io/">Uizard</a>
+        </dt>
+        <dd class="mb-3">
+          Logiciel collaborative pour le prototypage rapide. L'application
+          permet d'importer des prototypes papier et les transforme directement
+          en dessin dans le logiciel.
+        </dd>
+        <dt class="lead">
+          <i class="fa fa-chevron-circle-right"></i>
+          <a href="https://balsamiq.com/">Balsamiq</a>
+        </dt>
+        <dd class="mb-3">
+          Logiciel pour le prototypage surtout low-fidelity. Le logiciel peut
+          être utilisé dans le cloud ou en modalité application desktop.
+        </dd>
+        <dt class="lead">
+          <i class="fa fa-chevron-circle-right"></i>
+          <a href="https://www.adobe.com/ch_fr/products/xd.html">Adobe XD</a>
+        </dt>
+        <dd class="mb-3">
+          Logiciel de prototypage de la suite Adobe, il s'intègre avec les
+          autres logiciels de la suite (e.g. Illustrator, Photoshop, etc.).
         </dd>
       </dl>
     </div>
