Support other softwares

--- a/support.html
+++ b/support.html
@@ -92,7 +92,7 @@
         <dd class="mb-3">
           Présentation général du domaine UX/UI. La présentation se focalise
           principalement sur la phase d'implémentation d'une interface concrète.
-          Les techniques de conception et évaluation des phases exploiratoires
+          Les techniques de conception et évaluation des phases exploratoires
           (e.g. analyse des besoins, persona, ...) ne sont pas abordées.
         </dd>
         <dt class="lead">
@@ -132,10 +132,10 @@
         </dd>
       </dl>
 
-      <!-- Logiciels -->
-      <h2 class="mt-5">Logiciels de prototypage</h2>
+      <!-- Applications -->
+      <h2 class="mt-5">Applications de prototypage</h2>
       <p class="lead">
-        Logiciels pour le prototypage à différents niveaux d'abstraction.
+        Applications pour le prototypage à différents niveaux d'abstraction.
       </p>
       <dl class="w-75">
         <dt class="lead">
@@ -143,8 +143,8 @@
           <a href="https://www.figma.com/">Figma</a>
         </dt>
         <dd class="mb-3">
-          Logiciel pour le prototypage et les maquettes interactives qui permet
-          de collaborer en temps réel. L'application web marche dans le
+          Application pour le prototypage et les maquettes interactives qui
+          permet de collaborer en temps réel. L'application web marche dans le
           navigateur ou peut être téléchargée en version desktop. Le plan
           gratuit permet une collaboration limitée.
         </dd>
@@ -153,25 +153,51 @@
           <a href="https://uizard.io/">Uizard</a>
         </dt>
         <dd class="mb-3">
-          Logiciel collaborative pour le prototypage rapide. L'application
+          Application collaborative pour le prototypage rapide. L'application
           permet d'importer des prototypes papier et les transforme directement
-          en dessin dans le logiciel.
+          en dessin.
         </dd>
         <dt class="lead">
           <i class="fa fa-chevron-circle-right"></i>
           <a href="https://balsamiq.com/">Balsamiq</a>
         </dt>
         <dd class="mb-3">
-          Logiciel pour le prototypage surtout low-fidelity. Le logiciel peut
-          être utilisé dans le cloud ou en modalité application desktop.
+          Application pour le prototypage surtout low-fidelity. L'application
+          peut être utilisée dans le cloud ou en modalité application desktop.
         </dd>
         <dt class="lead">
           <i class="fa fa-chevron-circle-right"></i>
           <a href="https://www.adobe.com/ch_fr/products/xd.html">Adobe XD</a>
         </dt>
         <dd class="mb-3">
-          Logiciel de prototypage de la suite Adobe, il s'intègre avec les
-          autres logiciels de la suite (e.g. Illustrator, Photoshop, etc.).
+          Application de prototypage de la suite Adobe, il s'intègre avec les
+          autres applications de la suite (e.g. Illustrator, Photoshop, etc.).
+        </dd>
+      </dl>
+
+      <!-- Autre Applications -->
+      <h2 class="mt-5">Autre Applications</h2>
+      <p class="lead">
+        Autres applications souvent utilisés dans le domaine UX.
+      </p>
+      <dl class="w-75">
+        <dt class="lead">
+          <i class="fa fa-chevron-circle-right"></i>
+          <a href="https://miro.com/">Miro</a>
+        </dt>
+        <dd class="mb-3">
+          Application web qui permet de créer des tableaux blancs collaboratifs.
+          L'application fonctionne dans le navigateur ou peut être téléchargée
+          comme application desktop.
+        </dd>
+        <dt class="lead">
+          <i class="fa fa-chevron-circle-right"></i>
+          <a href="https://trello.com/">Trello</a>
+        </dt>
+        <dd class="mb-3">
+          Application pour la gestion de projets. Elle permet par exemple de
+          créer des <em>Kanban boards</em> souvent utilisés dans le
+          design/développement.
         </dd>
       </dl>
     </div>
