More elements in the support page

--- a/support.html
+++ b/support.html
@@ -78,128 +78,208 @@
       <p class="lead">Liste de ressources utiles pour le cours.</p>
 
       <!-- Slides -->
-      <h2>Slides</h2>
-      <p class="lead">
-        Supports utilisés pendant les séances du cours synchrone.
-      </p>
-      <dl class="w-75">
-        <dt class="lead">
-          <i class="fa fa-chevron-circle-right"></i>
-          <a href="https://mafritz.ch/slides/fr/ux-ui-web/#/"
-            >UX pour la conception et évaluation de UI pour le web</a
-          >
-        </dt>
-        <dd class="mb-3">
-          Présentation général du domaine UX/UI. La présentation se focalise
-          principalement sur la phase d'implémentation d'une interface concrète.
-          Les techniques de conception et évaluation des phases exploratoires
-          (e.g. analyse des besoins, persona, ...) ne sont pas abordées.
-        </dd>
-        <dt class="lead">
-          <i class="fa fa-chevron-circle-right"></i>
-          <a href="http://mafritz.ch/slides/fr/ux-prototypage-low-fi/#/"
-            >Prototypage low-fidelity dans l'UX</a
-          >
-        </dt>
-        <dd class="mb-3">
-          Présentation sur des techniques de prototypage low-fi dans le UX. Ce
-          type de prototypage s'effectue surtout dans des phases initiales du
-          projet, afin de maximiser l'exploration de variantes en minimisant le
-          travail à accomplir au niveau du design et des fonctionnalités.
-        </dd>
-        <dt class="lead">
-          <i class="fa fa-chevron-circle-right"></i>
-          <a href="http://mafritz.ch/slides/fr/ux-prototypage-high-fi/#/"
-            >Prototypage high-fidelity dans l'UX</a
-          >
-        </dt>
-        <dd class="mb-3">
-          Présentation sur des techniques de prototypage high-fi dans le UX. Ce
-          type de prototypage essaie de véhiculer une expérience la plus proche
-          du produit finale au niveau de l'apparence esthétique et/ou des
-          fonctionnalités.
-        </dd>
-        <dt class="lead">
-          <i class="fa fa-chevron-circle-right"></i>
-          <a href="https://mafritz.ch/slides/fr/ux-techniques-evaluation/#/"
-            >Techniques d'évaluation dans l'UX</a
-          >
-        </dt>
-        <dd class="mb-3">
-          Présentation sur des techniques d'évaluation comme l'oculométrie, le
-          test A/B, le test des 5 seconds, les échelles d'utilisabilité/UX, et
-          le test utilisateur.
-        </dd>
-      </dl>
+      <div section id="slides">
+        <h2>Slides</h2>
+        <p class="lead">
+          Supports utilisés pendant les séances du cours synchrone.
+        </p>
+        <dl class="w-75">
+          <dt class="lead">
+            <i class="fa fa-chevron-circle-right"></i>
+            <a href="https://mafritz.ch/slides/fr/ux-ui-web/#/"
+              >UX pour la conception et évaluation de UI pour le web</a
+            >
+          </dt>
+          <dd class="mb-3">
+            Présentation général du domaine UX/UI. La présentation se focalise
+            principalement sur la phase d'implémentation d'une interface
+            concrète. Les techniques de conception et évaluation des phases
+            exploratoires (e.g. analyse des besoins, persona, ...) ne sont pas
+            abordées.
+          </dd>
+          <dt class="lead">
+            <i class="fa fa-chevron-circle-right"></i>
+            <a href="http://mafritz.ch/slides/fr/ux-prototypage-low-fi/#/"
+              >Prototypage low-fidelity dans l'UX</a
+            >
+          </dt>
+          <dd class="mb-3">
+            Présentation sur des techniques de prototypage low-fi dans le UX. Ce
+            type de prototypage s'effectue surtout dans des phases initiales du
+            projet, afin de maximiser l'exploration de variantes en minimisant
+            le travail à accomplir au niveau du design et des fonctionnalités.
+          </dd>
+          <dt class="lead">
+            <i class="fa fa-chevron-circle-right"></i>
+            <a href="http://mafritz.ch/slides/fr/ux-prototypage-high-fi/#/"
+              >Prototypage high-fidelity dans l'UX</a
+            >
+          </dt>
+          <dd class="mb-3">
+            Présentation sur des techniques de prototypage high-fi dans le UX.
+            Ce type de prototypage essaie de véhiculer une expérience la plus
+            proche du produit finale au niveau de l'apparence esthétique et/ou
+            des fonctionnalités.
+          </dd>
+          <dt class="lead">
+            <i class="fa fa-chevron-circle-right"></i>
+            <a href="https://mafritz.ch/slides/fr/ux-techniques-evaluation/#/"
+              >Techniques d'évaluation dans l'UX</a
+            >
+          </dt>
+          <dd class="mb-3">
+            Présentation sur des techniques d'évaluation comme l'oculométrie, le
+            test A/B, le test des 5 seconds, les échelles d'utilisabilité/UX, et
+            le test utilisateur.
+          </dd>
+        </dl>
+      </div>
 
       <!-- Applications -->
-      <h2 class="mt-5">Applications de prototypage</h2>
-      <p class="lead">
-        Applications pour le prototypage à différents niveaux d'abstraction.
-      </p>
-      <dl class="w-75">
-        <dt class="lead">
-          <i class="fa fa-chevron-circle-right"></i>
-          <a href="https://www.figma.com/">Figma</a>
-        </dt>
-        <dd class="mb-3">
-          Application pour le prototypage et les maquettes interactives qui
-          permet de collaborer en temps réel. L'application web marche dans le
-          navigateur ou peut être téléchargée en version desktop. Le plan
-          gratuit permet une collaboration limitée.
-        </dd>
-        <dt class="lead">
-          <i class="fa fa-chevron-circle-right"></i>
-          <a href="https://uizard.io/">Uizard</a>
-        </dt>
-        <dd class="mb-3">
-          Application collaborative pour le prototypage rapide. L'application
-          permet d'importer des prototypes papier et les transforme directement
-          en dessin.
-        </dd>
-        <dt class="lead">
-          <i class="fa fa-chevron-circle-right"></i>
-          <a href="https://balsamiq.com/">Balsamiq</a>
-        </dt>
-        <dd class="mb-3">
-          Application pour le prototypage surtout low-fidelity. L'application
-          peut être utilisée dans le cloud ou en modalité application desktop.
-        </dd>
-        <dt class="lead">
-          <i class="fa fa-chevron-circle-right"></i>
-          <a href="https://www.adobe.com/ch_fr/products/xd.html">Adobe XD</a>
-        </dt>
-        <dd class="mb-3">
-          Application de prototypage de la suite Adobe, il s'intègre avec les
-          autres applications de la suite (e.g. Illustrator, Photoshop, etc.).
-        </dd>
-      </dl>
+      <section id="applications">
+        <h2 class="mt-5">Applications de prototypage</h2>
+        <p class="lead">
+          Applications pour le prototypage à différents niveaux d'abstraction.
+        </p>
+        <dl class="w-75">
+          <dt class="lead">
+            <i class="fa fa-chevron-circle-right"></i>
+            <a href="https://www.figma.com/">Figma</a>
+          </dt>
+          <dd class="mb-3">
+            Application pour le prototypage et les maquettes interactives qui
+            permet de collaborer en temps réel. L'application web marche dans le
+            navigateur ou peut être téléchargée en version desktop. Le plan
+            gratuit permet une collaboration limitée.
+          </dd>
+          <dt class="lead">
+            <i class="fa fa-chevron-circle-right"></i>
+            <a href="https://uizard.io/">Uizard</a>
+          </dt>
+          <dd class="mb-3">
+            Application collaborative pour le prototypage rapide. L'application
+            permet d'importer des prototypes papier et les transforme
+            directement en dessin.
+          </dd>
+          <dt class="lead">
+            <i class="fa fa-chevron-circle-right"></i>
+            <a href="https://balsamiq.com/">Balsamiq</a>
+          </dt>
+          <dd class="mb-3">
+            Application pour le prototypage surtout low-fidelity. L'application
+            peut être utilisée dans le cloud ou en modalité application desktop.
+          </dd>
+          <dt class="lead">
+            <i class="fa fa-chevron-circle-right"></i>
+            <a href="https://www.adobe.com/ch_fr/products/xd.html">Adobe XD</a>
+          </dt>
+          <dd class="mb-3">
+            Application de prototypage de la suite Adobe, il s'intègre avec les
+            autres applications de la suite (e.g. Illustrator, Photoshop, etc.).
+          </dd>
+          <dt class="lead">
+            <i class="fa fa-chevron-circle-right"></i>
+            <a href="https://www.justinmind.com/">Justinmind</a>
+          </dt>
+          <dd class="mb-3">
+            Application de prototypage pour différents dispositifs. Possibilité
+            de collaborer avec d'autres personnes.
+          </dd>
+          <dt class="lead">
+            <i class="fa fa-chevron-circle-right"></i>
+            <a href="https://www.invisionapp.com/">Invision</a>
+          </dt>
+          <dd class="mb-3">
+            Plateforme pour la production de produits digitaux. Possibilité de
+            collaborer avec d'autres personnes.
+          </dd>
+        </dl>
+      </section>
 
       <!-- Autre Applications -->
-      <h2 class="mt-5">Autre Applications</h2>
-      <p class="lead">
-        Autres applications souvent utilisés dans le domaine UX.
-      </p>
-      <dl class="w-75">
-        <dt class="lead">
-          <i class="fa fa-chevron-circle-right"></i>
-          <a href="https://miro.com/">Miro</a>
-        </dt>
-        <dd class="mb-3">
-          Application web qui permet de créer des tableaux blancs collaboratifs.
-          L'application fonctionne dans le navigateur ou peut être téléchargée
-          comme application desktop.
-        </dd>
-        <dt class="lead">
-          <i class="fa fa-chevron-circle-right"></i>
-          <a href="https://trello.com/">Trello</a>
-        </dt>
-        <dd class="mb-3">
-          Application pour la gestion de projets. Elle permet par exemple de
-          créer des <em>Kanban boards</em> souvent utilisés dans le
-          design/développement.
-        </dd>
-      </dl>
+      <section id="other-applications">
+        <h2 class="mt-5">Autre Applications</h2>
+        <p class="lead">
+          Autres applications souvent utilisés dans le domaine UX.
+        </p>
+        <dl class="w-75">
+          <dt class="lead">
+            <i class="fa fa-chevron-circle-right"></i>
+            <a href="https://miro.com/">Miro</a>
+          </dt>
+          <dd class="mb-3">
+            Application web qui permet de créer des tableaux blancs
+            collaboratifs. L'application fonctionne dans le navigateur ou peut
+            être téléchargée comme application desktop.
+          </dd>
+          <dt class="lead">
+            <i class="fa fa-chevron-circle-right"></i>
+            <a href="https://trello.com/">Trello</a>
+          </dt>
+          <dd class="mb-3">
+            Application pour la gestion de projets. Elle permet par exemple de
+            créer des <em>Kanban boards</em> souvent utilisés dans le
+            design/développement.
+          </dd>
+        </dl>
+      </section>
+
+      <!-- Sites -->
+      <section id="sites">
+        <h2 class="mt-5">Sites</h2>
+        <p class="lead">Sites avec informations utiles au domaine UX.</p>
+        <dl class="w-75">
+          <dt class="lead">
+            <i class="fa fa-chevron-circle-right"></i>
+            <a href="https://fr.uxmyths.com/">UX Myths</a>
+          </dt>
+          <dd class="mb-3">
+            Collection de mythes sur le domaine UX disponibles dans plusieurs
+            langues, y compris le français. La liste date déjà de quelques
+            années, mais elle est toujours actuelle.
+          </dd>
+          <dt class="lead">
+            <i class="fa fa-chevron-circle-right"></i>
+            <a href="https://www.interaction-design.org/"
+              >Interaction Design Foundation</a
+            >
+          </dt>
+          <dd class="mb-3">
+            Site qui propose une section <em>Literature</em> avec des fiches et
+            articles approfondies sur la thématique de l'UX et de l'interaction
+            personne-machine plus en général.
+          </dd>
+          <dt class="lead">
+            <i class="fa fa-chevron-circle-right"></i>
+            <a href="https://alistapart.com/">A List Apart</a>
+          </dt>
+          <dd class="mb-3">
+            L'un des premiers sites à propos de la création de sites web, avec
+            des articles du type UX, mais également plus techniques.
+          </dd>
+          <dt class="lead">
+            <i class="fa fa-chevron-circle-right"></i>
+            <a href="https://www.allaboutux.org/">All About UX</a>
+          </dt>
+          <dd class="mb-3">
+            Collection de ressources pour les professionnels du UX. Le site
+            n'est probablement plus mis à jour régulièrement, mais propose entre
+            autre une liste intéressante de définition du domaine UX.
+          </dd>
+          <dt class="lead">
+            <i class="fa fa-chevron-circle-right"></i>
+            <a href="https://www.w3.org/WAI/standards-guidelines/"
+              >W3C Accessibility Standards Overview</a
+            >
+          </dt>
+          <dd class="mb-3">
+            Guidelines du W3C sur la conception et l'évaluation de
+            l'accessibilité des interfaces web.
+          </dd>
+        </dl>
+      </section>
+
+      <!-- End of resources -->
     </div>
 
     <footer class="bg-dark text-white mt-5 mb-0 py-5">
