Livrable et fr in html

--- a/livrables.html
+++ b/livrables.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8" />
@@ -77,7 +77,7 @@
       <p class="alert alert-danger fw-bold">
         <i class="fa fa-exclamation-triangle"></i>
         Le contenu de cette page peut être modifié. Dernière mise à jour
-        27.02.2021 à 15:00
+        18.03.2021 à 12:00
       </p>
       <h1 class="display-3">Livrables</h1>
       <p class="lead mt-3">
@@ -823,11 +823,98 @@
           #7 <i class="fa fa-user"></i> Deuxième version de la maquette et
           rapport final
         </h3>
+        <p class="lead">
+          Le rapport final vous permet d'illustrer l'ensemble de votre projet en
+          combinant les informations issues des tests utilisateurs effectués par
+          chaque membre du groupe. Ces informations sont utilisées pour apporter
+          des remédiations à votre première version de la maquette et en
+          proposer une deuxième.
+        </p>
         <h4>Consignes</h4>
+
+        <p>
+          Pour le <strong>rapport final</strong> : rédigez un rapport de groupe
+          selon les indications et la structure du template fourni.
+        </p>
+        <p>
+          <a
+            href="./assets/docs/rapport-final.pdf"
+            class="btn btn-outline-danger"
+            ><i class="fa fa-download" aria-hidden="true"></i> Template du
+            rapport final</a
+          >
+        </p>
+
+        <p>
+          Pour la <strong>deuxième version de la maquette</strong> : apportez
+          des modifications à votre première version de la maquette selon les
+          éléments issus des tests utilisateurs.
+        </p>
+
+        <p class="alert alert-warning">
+          <strong
+            ><i class="fa fa-exclamation-triangle"></i> Publiez une nouvelle
+            maquette, en gardant la première version intacte afin qu'on puisse
+            comparer les deux versions.</strong
+          >
+        </p>
 
         <h4>Contraintes</h4>
 
+        <p>
+          Pour le rapport final, mêmes contraintes du rapport individuel avec
+          ces exceptions :
+        </p>
+        <ul>
+          <li>
+            Votre rapport ne doit pas dépasser les <strong>9'000 mots</strong>
+          </li>
+          <li>
+            Aucun limite sur le nombre de problèmes majeurs à analyser dans la
+            section résultats
+          </li>
+          <li>
+            Ajoutez et justifiez les remédiations à la première version de la
+            maquette
+          </li>
+        </ul>
+
+        <p>
+          Pour la deuxième version de la maquette interactive, mêmes contraintes
+          de la première version avec ces exceptions :
+        </p>
+        <ul>
+          <li>
+            Tous les contenus de votre site doivent être aboutis, à l'exception
+            des fonctionnalités dynamiques qui ne peuvent pas être implementées
+            dans une maquette interactive (e.g. moteur de recherche, ...)
+          </li>
+          <li>
+            Vous avez le droit d'enlever des pages si elles ne sont pas
+            sufissamment développées ou pertinentes, mais vous devez en tout cas
+            proposer au moins 15 pages dans une perspective
+            <em>minimum viable product</em>
+          </li>
+        </ul>
+
         <h4>Conseils</h4>
+        <p>Pour le rapport final :</p>
+        <ul>
+          <li>
+            Vous avez le droit de reprendre <em>verbatim</em> des passages de
+            vos rapports individuels, surtout dans la section sur la
+            méthodologie
+          </li>
+          <li>
+            Discutez avec vos collègues les différents problèmes rencontrés dans
+            les tests utilisateurs et essayez de faire une synthèse des éléments
+            plutôt qu'un collage entre éléments séparés
+          </li>
+          <li>
+            Faites attention aux détails de forme dans votre rapport final
+            (erreurs orthographiques, etc.)
+          </li>
+        </ul>
       </section>
     </div>
 
