--- a/livrables.html
+++ b/livrables.html
@@ -870,7 +870,7 @@
             Votre rapport ne doit pas dépasser les <strong>9'000 mots</strong>
           </li>
           <li>
-            Aucun limite sur le nombre de problèmes majeurs à analyser dans la
+            Aucune limite sur le nombre de problèmes majeurs à analyser dans la
             section résultats
           </li>
           <li>
@@ -886,12 +886,12 @@
         <ul>
           <li>
             Tous les contenus de votre site doivent être aboutis, à l'exception
-            des fonctionnalités dynamiques qui ne peuvent pas être implementées
+            des fonctionnalités dynamiques qui ne peuvent pas être implémentées
             dans une maquette interactive (e.g. moteur de recherche, ...)
           </li>
           <li>
             Vous avez le droit d'enlever des pages si elles ne sont pas
-            sufissamment développées ou pertinentes, mais vous devez en tout cas
+            suffisamment développées ou pertinentes, mais vous devez en tout cas
             proposer au moins 15 pages dans une perspective
             <em>minimum viable product</em>
           </li>
